--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "firebase": "^7.12.0",
     "lodash": "latest",
     "moment": "^2.24.0",
     "quasar": "^1.0.0",
