agregando firebase hosting e iconos a estadisticas

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "quasar dev",
     "build": "quasar build",
+    "deploy": "firebase deploy",
     "build:pwa": "quasar build -m pwa",
     "lint": "eslint --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0"
