--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "moment": "^2.24.0",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0",
+    "vue-trend-chart": "^0.15.1",
+    "vuex": "^3.1.3",
     "vuexfire": "^3.2.2"
   },
   "devDependencies": {
